Fix: webkit-text-size-adjust for safari on iphone

--- a/css/custom.css
+++ b/css/custom.css
@@ -148,3 +148,7 @@ pre code,
     font-family: ui-monospace, monospace;
     line-height: 1.4;
 }
+
+html {
+    -webkit-text-size-adjust: 100%;
+}
